# R2Dtool

./:    2022-01-31_cheui-annotate2.R  2022-01-31_cheui-annotate2.sh  Cargo.toml  LICENSE  README.md  annotate.R  benchmark.sh  cheui_to_bed.sh  lift.R  txannotate.sh  txannotate_cheui.sh
R2Dtool_rust/: Cargo.toml  benchmark.sh  output.txt  test  test_out.bed
R2Dtool_rust/src/: .2022-03-31-15-01_backup_main.rs  .2022-04-01_backup-main-working.rs  annotate.rs  liftover.rs  main.rs  parse_annotation.rs
manuscript_demo/: benchmark.sh  process_data.sh  process_data_V2_r10.sh
scripts/: .Rhistory  R2_annotate.R  R2_annotate_retainTranscriptVersion.R  R2_lift.R  R2_plotMetaCodon.R  R2_plotMetaJunction.R  R2_plotMetaTranscript.R  cheui_to_bed.sh  diffmod_text2bed_convert.R  lift.R  txliftover.sh
scripts/deprecated/: R2_lift.R  R2_lift_keepTranscriptVersion.R  benchmark.sh  cheui_diff_to_bed.sh  compare.ipynb  process_data.sh  txannotate.sh
scripts/manuscript_demo/: process_data_for_manuscript.sh
setup/: 2022-06-16_install-R-packages.gadi.sh
src/: annotate.rs  liftover.rs  main.rs  mod.rs  parse_annotation.rs  parse_gtf.rs
src/tests/: mod.rs  plot_integration_tests.rs
test/: CHEUI_modelII_subset.txt  GRCm39_subset.gff3  GRCm39_subset.gtf  gencode_v38.gtf  liftover_output.txt  liftover_output.txt.temp.gtf  m6A_isoform_sites_GRCh38_subset.bed  make_test.sh  out_CHEUI_modelII.bed  out_CHEUI_modelII_annotated.bed  out_CMII_annotated_lifted.bed  subset_GRCm39.104_annotation.gtf  test_bed.bed  test_mouse_GRCm39_cheui-model-ii.bed  test_mouse_GRCm39_cheui-model-ii.txt
